Feat ## Implementação testes unitários EventoService e Ajustes sugeridos SonarQube